change jdk9+ start parameters