@@ -143,7 +143,7 @@
         <sonar.exclusions>**/generated-sources</sonar.exclusions>
         <!-- By default, the argLine is empty-->
         <gson.version>2.8.6</gson.version>
-        <argLine/>
+        <argLine>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
     </properties>
     <!--
         if we claim dependencies in dependencyManagement, then we do not claim
